# wmai-chat-root

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md
docs/: logging.md  (+6 more)
llm-cli-v4/backend/: .gitignore  CLAUDE.md  pdf_output.txt  pyproject.toml  requirements.txt
llm-cli-v4/backend/src/: __main__.py
llm-cli-v4/backend/src/adapters/: __init__.py  base.py  openai.py  qwen.py
llm-cli-v4/backend/src/api/: __init__.py  chat.py  conversations.py  health.py  models.py  test.py  tools.py
llm-cli-v4/backend/src/cli/: __init__.py  input.py  interface.py  output.py  prompt_input.py
llm-cli-v4/backend/src/config/: __init__.py  loader.py  models.py
llm-cli-v4/backend/src/core/: __init__.py  client.py  session.py
llm-cli-v4/backend/src/modules/: __init__.py  base.py
llm-cli-v4/backend/src/modules/conversations/: __init__.py  dao.py  dtos.py  models.py  service.py
llm-cli-v4/backend/src/modules/datasource/: __init__.py  connection.py  database.py
llm-cli-v4/backend/src/modules/test/: __init__.py  dao.py  models.py  service.py
llm-cli-v4/backend/src/modules/tools/: __init__.py  dao.py  dtos.py  models.py  service.py
llm-cli-v4/backend/src/skills/: __init__.py  executor.py  loader.py  parser.py
llm-cli-v4/backend/src/tools/: __init__.py  base.py  registry.py  registry_init.py
llm-cli-v4/backend/src/utils/: __init__.py  frontmatter.py  logger.py  logging_web.py  stream_writer_util.py
llm-cli-v4/backend/src/web/: __init__.py  cors.py  logging_middleware.py  sse.py
llm-cli-v4/backend/tests/: __test_test_module.py  conftest.py  test_tools_api.py
(+49 files in other folders)
